# temperature-monitor

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
docs/: temperature-monitor.puml
tests/: CMakeLists.txt
